--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,7 +14,7 @@ chrono = "0.4.23"
 fern = "0.6.1"
 libc = "0.2.139"
 log = "0.4.17"
-reqwest = { version = "0.11", features = ["blocking", "json","__tls"] }
+reqwest = { version = "0.11", features = ["blocking", "json","rustls"] }
 
 
 [lib]
