--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,13 +9,12 @@ build="build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.69"
-chrono = "0.4.23"
-fern = "0.6.1"
-libc = "0.2.139"
-log = "0.4.17"
-reqwest = { version = "0.11", features = ["blocking", "json","rustls"] }
-
+anyhow = "1.0.75"
+chrono = "0.4.31"
+fern = "0.6.2"
+libc = "0.2.151"
+log = "0.4.20"
+reqwest = { version = "0.11.22", features = ["blocking", "json", "rustls", "cookies"] }
 
 [lib]
 crate-type = ["cdylib"]
