--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -17,7 +17,7 @@ log = "0.4.20"
 reqwest = { version = "0.11.22", features = ["blocking", "json", "rustls", "cookies"] }
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "staticlib"]
 
 [build-dependencies]
 cbindgen = "0.24.3"
