--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,17 +9,17 @@ build="build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.75"
-chrono = "0.4.31"
+anyhow = "1.0.89"
+chrono = "0.4.38"
 fern = "0.6.2"
-libc = "0.2.151"
-log = "0.4.20"
-reqwest = { version = "0.12.5", features = ["blocking", "json", "cookies"] }
-strum = { version = "0.26", features = ["derive"] }
-strum_macros = "0.26"
+libc = "0.2.159"
+log = "0.4.22"
+reqwest = { version = "0.12.8", features = ["blocking", "json", "cookies", "multipart"] }
+strum = { version = "0.26.3", features = ["derive"] }
+strum_macros = "0.26.4"
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
 
 [build-dependencies]
-cbindgen = "0.26.0"
+cbindgen = "0.27.0"
