style: :lipstick: format code

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "client"
 version = "1.0.3"
-authors = ["markrenChina <390835144@qq.com>"]
+authors = ["zhangdaoqiang <zdq@meitu.com>"]
 description = "T"
-repository = "https://github.com/markrenChina/reqwest_cpp"
-build="build.rs"
+repository = "https://techgit.meitu.com/yunxiu/mtyx_source/reqwest_cpp"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,7 +14,7 @@ chrono = "0.4.38"
 fern = "0.6.2"
 libc = "0.2.159"
 log = "0.4.22"
-reqwest = { version = "0.12.8", features = ["blocking", "json", "cookies", "multipart"] }
+reqwest = { version = "0.12.8", features = ["blocking", "json", "cookies", "multipart", "hickory-dns", "trust-dns", "gzip", "zstd", "deflate"] }
 strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
 
