--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,7 +14,7 @@ chrono = "0.4.38"
 fern = "0.6.2"
 libc = "0.2.159"
 log = "0.4.22"
-reqwest = { version = "0.12.8", features = ["blocking", "json", "cookies", "multipart", "hickory-dns", "trust-dns", "gzip", "zstd", "deflate"] }
+reqwest = { version = "0.12.8", features = ["blocking", "json", "cookies", "multipart", "hickory-dns", "gzip", "zstd", "deflate"] }
 strum = { version = "0.26.3", features = ["derive"] }
 strum_macros = "0.26.4"
 
