feat: refactor CMakeLists.txt

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -7,16 +7,24 @@ else ()
     set(TARGET_DIR "release")
 endif ()
 
+# 根据平台设置动态库后缀
+if (WIN32)
+    set(CLIENT_LIB "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DIR}/client.dll")
+elseif (APPLE)
+    set(CLIENT_LIB "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DIR}/libclient.dylib")
+else ()
+    set(CLIENT_LIB "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DIR}/libclient.so")
+endif ()
 
-set(CLIENT_SO "${CMAKE_CURRENT_BINARY_DIR}/${TARGET_DIR}/libclient.dylib")
+message(STATUS "client lib path:${CLIENT_LIB} current binary dir:${CMAKE_CURRENT_BINARY_DIR}")
 
 add_custom_target(client ALL
-    COMMENT "Compiling client module"
-    COMMAND CARGO_TARGET_DIR=${CMAKE_CURRENT_BINARY_DIR} ${CARGO_CMD}
-    COMMAND cp ${CLIENT_SO} ${CMAKE_CURRENT_BINARY_DIR}
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-set_target_properties(client PROPERTIES LOCATION ${CMAKE_CURRENT_BINARY_DIR})
+        COMMENT "Compiling client module"
+        COMMAND CARGO_TARGET_DIR=${CMAKE_CURRENT_BINARY_DIR} ${CARGO_CMD}
+        COMMAND ${CMAKE_COMMAND} -E copy ${CLIENT_LIB} ${CMAKE_CURRENT_BINARY_DIR}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
+# 添加测试
 add_test(NAME client_test
-    COMMAND cargo test
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+        COMMAND cargo test
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
