refactor: :recycle: 优化bytes接口&code format

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SOURCE main.cpp
         main_window.cpp main_window.hpp
         wrappers.cpp wrappers.hpp
         client.hpp
+        response_content.cpp
 )
 
 add_executable(gui ${SOURCE})
