调整目录结构

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -37,8 +37,19 @@ set(CLIENT_LIB_DIR ${CMAKE_BINARY_DIR}/client)
 
 set(SOURCE main.cpp
         main_window.cpp main_window.hpp
-        wrappers.cpp wrappers.hpp
-        client.hpp
+        base/net/http/client.cpp
+        base/net/http/client_builder.cpp
+        base/net/http/header_map.cpp
+        base/net/http/http_exeception.cpp
+        base/net/http/pair.cpp
+        base/net/http/proxy.cpp
+        base/net/http/request_builder.cpp
+        base/net/http/response.cpp
+
+        base/util/byte_buffer.cpp
+        base/util/base64.cpp
+        base/util/md5.cpp
+        base/util/url.cpp
 )
 
 add_executable(gui ${SOURCE})
@@ -51,14 +62,12 @@ target_link_libraries(gui
 )
 
 if (WIN32)
-    target_link_libraries(gui ${CLIENT_LIB_DIR}/client.dll.lib)
+    target_link_libraries(gui ${CLIENT_LIB_DIR}/client.dll.lib ${CLIENT_LIB_DIR}/code_shadow.dll.lib)
 elseif (APPLE)
-    target_link_libraries(gui ${CLIENT_LIB_DIR}/libclient.dylib)
+    target_link_libraries(gui ${CLIENT_LIB_DIR}/libclient.dylib ${CLIENT_LIB_DIR}/code_shadow.dylib)
 else ()
     target_link_libraries(gui ${CLIENT_LIB_DIR}/libclient.so)
 endif ()
-
-
 
 # 生成so库
 #set(SRC wrappers.cpp wrappers.hpp ffi.hpp)
