--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -9,11 +9,11 @@ endif ()
 
 # 根据平台设置动态库后缀
 if (WIN32)
-    file(GLOB CLIENT_LIBS "${CMAKE_CURRENT_SOURCE_DIR}/target/${TARGET_DIR}/client.*")
+    file(GLOB CLIENT_LIBS "${CMAKE_CURRENT_SOURCE_DIR}/target/${TARGET_DIR}/crab_http.*")
 elseif (APPLE)
-    set(CLIENT_LIB "${CMAKE_CURRENT_SOURCE_DIR}/target/${TARGET_DIR}/libclient.dylib")
+    set(CLIENT_LIB "${CMAKE_CURRENT_SOURCE_DIR}/target/${TARGET_DIR}/libcrab_http.dylib")
 else ()
-    set(CLIENT_LIB "${CMAKE_CURRENT_SOURCE_DIR}/target/${TARGET_DIR}/libclient.so")
+    set(CLIENT_LIB "${CMAKE_CURRENT_SOURCE_DIR}/target/${TARGET_DIR}/libcrab_http.so")
 endif ()
 
 message(STATUS "client lib path:${CLIENT_LIB} current binary dir:${CMAKE_CURRENT_BINARY_DIR}")
@@ -37,16 +37,16 @@ else ()
             COMMAND ${CMAKE_COMMAND} -E copy ${CLIENT_LIB} ${CMAKE_CURRENT_BINARY_DIR}
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 endif ()
-set(CLIENT_HEADER_SRC "${CMAKE_CURRENT_SOURCE_DIR}/target/client.hpp")
-set(CLIENT_HEADER_DST "${CMAKE_SOURCE_DIR}/gui/client.hpp")
-
-# 添加一个自定义命令，将client.hpp文件拷贝到gui目录
-add_custom_command(
-        OUTPUT ${CLIENT_HEADER_DST}
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CLIENT_HEADER_SRC} ${CLIENT_HEADER_DST}
-        DEPENDS ${CLIENT_HEADER_SRC}
-        COMMENT "Copying client.hpp to gui directory"
-)
+#set(CLIENT_HEADER_SRC "${CMAKE_CURRENT_SOURCE_DIR}/target/crab_http_c.h")
+#set(CLIENT_HEADER_DST "${CMAKE_SOURCE_DIR}/gui/include/crab_http_c.h")
+#
+## 添加一个自定义命令，将client.hpp文件拷贝到gui目录
+#add_custom_command(
+#        OUTPUT ${CLIENT_HEADER_DST}
+#        COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CLIENT_HEADER_SRC} ${CLIENT_HEADER_DST}
+#        DEPENDS ${CLIENT_HEADER_SRC}
+#        COMMENT "Copying client.hpp to gui directory"
+#)
 
 # 添加测试
 add_test(NAME client_test
