[bugfix] fix io error and support x86 on mac

--- a/crab_http/CMakeLists.txt
+++ b/crab_http/CMakeLists.txt
@@ -28,6 +28,8 @@ set(HEADERS
         response.h
 )
 
+set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
+
 add_library(crab_http_cpp STATIC ${SOURCES} ${HEADERS})
 add_library(crab_http_cpp::crab_http_cpp ALIAS crab_http_cpp)
 
