--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,15 +11,15 @@ build = "build.rs"
 [dependencies]
 anyhow = "1.0.89"
 chrono = "0.4.38"
-fern = "0.6.2"
+fern = "0.7.1"
 libc = "0.2.159"
 log = "0.4.22"
-reqwest = { version = "0.12.8", features = ["blocking", "json", "cookies", "multipart", "hickory-dns", "gzip", "zstd", "deflate", "charset"] }
-strum = { version = "0.26.3", features = ["derive"] }
-strum_macros = "0.26.4"
+reqwest = { version = "0.12.12", features = ["blocking", "json", "cookies", "multipart", "hickory-dns", "gzip", "zstd", "deflate", "charset", "native-tls", "rustls-tls"] }
+strum = { version = "0.27.0", features = ["derive"] }
+strum_macros = "0.27.0"
 
 [lib]
 crate-type = ["cdylib"]
 
 [build-dependencies]
-cbindgen = "0.27.0"
+cbindgen = "0.28.0"
